# PrettyLittleBabies_CreAItion

./: README.md  SETUP.md  eva_pitch_deck.md.resolved
backend/: .env.example  .gitignore  config.py  graph.py  local.db  main.py  pyproject.toml  pyrightconfig.json  state.py
backend/agents/: __init__.py  notifier.py  parser.py
backend2/: .env.example  .gitignore  API_DOCUMENTATION.md  config.py  graph.py  local.db  main.py  pyproject.toml  state.py
backend2/agents/: __init__.py  dummy_agent.py
frontend/: App.js  package-lock.json  package.json
frontend/src/components/specialized/: ParserCard.js  TaskCard.js
frontend/src/components/ui/: AppButton.js  AppModal.js  GlassCard.js
frontend/src/config/: theme.js
frontend/src/navigation/: AppNavigator.js
frontend/src/screens/Auth/: LoginScreen.js  OnboardingScreen.js
frontend/src/screens/Main/: CalendarScreen.js  DashboardScreen.js  InboxScreen.js  InsightsScreen.js  PlannerScreen.js
