[project]
name = "prettylittlebabies-backend"
version = "0.1.0"
description = "PrettyLittleBabies CreAItion - LangGraph Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.1",
    "langchain>=0.3.20",
    "langchain-groq>=0.3.0",
    "langchain-core>=0.3.40",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.0",
    "twilio>=8.0.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
